--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ athens2015/app/tmp/*
 Icon?
 ehthumbs.db
 Thumbs.db
+.idea/workspace.xml
+
+app/tmp/cache/persistent/myapp_cake_core_file_map
+
+app/tmp/logs/error.log
